# CLI

./: .flake8  .gitignore  .pdm.toml  .pre-commit-config.yaml  LICENSE  README.md  entry.py  pyproject.toml
graiax/cli/: __init__.py  util.py
graiax/cli/command/: __init__.py  init.py  inject.py
graiax/cli/prompt/: __init__.py  boolean.py  export.py  select.py  text.py
graiax/ignite/: __init__.py
