[tool.poetry]
name = "graiax-cli"
version = "0.11.0"
description = "Command line tool for Graia Framework."
authors = ["BlueGlassBlock <blueglassblock@outlook.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/GraiaCommunity/CLI"
packages = [{ include = "graiax" }]
keywords = ["bot", "qq", "graia", "graiax", "cli"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: Robot Framework",
  "Framework :: Robot Framework :: Library",
  "Operating System :: OS Independent"
]

[[tool.poetry.source]]
name = "tuna-tsinghua"
default = false
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"

[[tool.poetry.source]]
name = "aliyun"
default = false
url = "https://mirrors.aliyun.com/pypi/simple/"

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.4.0"
watchgod = { version = "^0.7", optional = true }
prompt-toolkit = "^3.0.26"
pyfiglet = "^0.8.post1"
tomlkit = "^0.9.2"
click-completion = "^0.5.2"

[tool.poetry.extras]
fwatch = ["watchgod"]
watchgod = ["watchgod"]

[tool.poetry.dev-dependencies]
black = "^22.1.0"
isort = "^5.10.1"
pre-commit = "^2.17.0"

[tool.poetry.scripts]
graiax = "graiax.cli:main"

[tool.pdm]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 110
target-version = ['py39']
