[tool.isort]
profile = "black"

[tool.black]
line-length = 110
target-version = ['py39']

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black>=22.3.0",
    "isort>=5.10.1",
]
[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
authors = [
    {name = "BlueGlassBlock", email = "blueglassblock@outlook.com"},
]
license-expression = "MIT"
requires-python = ">=3.8,<4.0"
dependencies = [
    "prompt-toolkit<4.0.0,>=3.0.26",
    "pyfiglet<1.0.0,>=0.8.post1",
    "tomlkit<1.0.0,>=0.9.2",
]
name = "graiax-cli"
version = "0.11.0"
description = "Command line tool for Graia Framework."
readme = "README.md"
keywords = ["bot", "qq", "graia", "graiax", "cli"]
classifiers = ["Development Status :: 4 - Beta", "Framework :: Robot Framework", "Framework :: Robot Framework :: Library", "Operating System :: OS Independent"]

[project.urls]
repository = "https://github.com/GraiaCommunity/CLI"

[project.optional-dependencies]
fwatch = ["watchgod<1.0,>=0.7"]

[project.scripts]
graiax = "graiax.cli:main"

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
