[tool.isort]
profile = "black"

[tool.black]
line-length = 110
target-version = ['py39']

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black>=22.3.0",
    "isort>=5.10.1",
    "graia-ariadne>=0.7.6",
]
[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
authors = [
    {name = "BlueGlassBlock", email = "blueglassblock@outlook.com"},
]
license-expression = "MIT"
requires-python = ">=3.8,<4.0"
dependencies = [
    "prompt-toolkit<4.0.0,>=3.0.26",
    "pyfiglet<1.0.0,>=0.8.post1",
    "tomlkit<1.0.0,>=0.9.2",
    "watchgod<1.0,>=0.7",
    "graia-saya>=0.0.15",
    "tomli>=2.0.1",
]
name = "graiax-cli-workspace"
version = "0.11.0"
description = "Command line tool for Graia Framework."
readme = "README.md"
keywords = ["bot", "qq", "graia", "graiax", "cli"]
classifiers = ["Development Status :: 4 - Beta", "Framework :: Robot Framework", "Framework :: Robot Framework :: Library", "Operating System :: OS Independent"]

[project.urls]
repository = "https://github.com/GraiaCommunity/CLI"

[project.scripts]
graiax = "graiax.cli:main"

[project.optional-dependencies]
[build-system]
requires = ["mina-build>=0.2.6"]
build-backend = "mina.backend"

[tool.mina]
enabled = true

[tool.mina.packages."ignite"]
includes = [
    "graiax/ignite"
]
[tool.mina.packages."ignite".project]
name = "graiax-ignite"
version = "0.1.0"
description = "build backend for Mina Package Structure"
authors = [
    {name = "BlueGlassBlock", email = "blueglassblock@outlook.com"},
]
dependencies = ["tomli"]
requires-python = ">=3.8"
license = {text = "MIT"}

[tool.mina.packages."cli"]
includes = [
    "graiax/cli"
]
[tool.mina.packages."cli".project]
name = "graiax-cli"
version = "0.11.0"
description = "build backend for Mina Package Structure"
authors = [
    {name = "BlueGlassBlock", email = "blueglassblock@outlook.com"},
]
dependencies = ["prompt-toolkit", "tomlkit"]
optional-dependencies = { fwatch = ["watchgod"] }
requires-python = ">=3.8"
license = {text = "MIT"}
